@@ -527,7 +527,7 @@ int16_t tile_element_height(const CoordsXY& loc)
 
     uint8_t xl, yl; // coordinates across this tile
 
-    uint8_t TILE_SIZE = 31;
+    uint8_t TILE_SIZE = 32;
 
     xl = loc.x & 0x1f;
     yl = loc.y & 0x1f;
@@ -569,14 +569,13 @@ int16_t tile_element_height(const CoordsXY& loc)
     switch (slope)
     {
         case TILE_ELEMENT_SLOPE_NE_SIDE_UP:
-            height += xl / 2 + 1;
+            height += xl / 2;
             break;
         case TILE_ELEMENT_SLOPE_SE_SIDE_UP:
             height += (TILE_SIZE - yl) / 2;
             break;
         case TILE_ELEMENT_SLOPE_NW_SIDE_UP:
             height += yl / 2;
-            height++;
             break;
         case TILE_ELEMENT_SLOPE_SW_SIDE_UP:
             height += (TILE_SIZE - xl) / 2;
@@ -595,7 +594,7 @@ int16_t tile_element_height(const CoordsXY& loc)
                 break;
             case TILE_ELEMENT_SLOPE_S_CORNER_DN:
                 quad_extra = xl + yl;
-                quad = xl + yl - TILE_SIZE - 1;
+                quad = xl + yl - TILE_SIZE;
                 break;
             case TILE_ELEMENT_SLOPE_E_CORNER_DN:
                 quad_extra = TILE_SIZE - xl + yl;
@@ -603,14 +602,13 @@ int16_t tile_element_height(const CoordsXY& loc)
                 break;
             case TILE_ELEMENT_SLOPE_N_CORNER_DN:
                 quad_extra = (TILE_SIZE - xl) + (TILE_SIZE - yl);
-                quad = TILE_SIZE - yl - xl - 1;
+                quad = TILE_SIZE - yl - xl;
                 break;
         }
 
         if (extra_height)
         {
             height += quad_extra / 2;
-            height++;
             return height;
         }
         // This tile is essentially at the next height level
@@ -628,20 +626,13 @@ int16_t tile_element_height(const CoordsXY& loc)
         switch (slope)
         {
             case TILE_ELEMENT_SLOPE_W_E_VALLEY:
-                if (xl + yl <= TILE_SIZE + 1)
-                {
-                    return height;
-                }
-                quad = TILE_SIZE - xl - yl;
+                quad = std::abs(xl + yl - TILE_SIZE);
                 break;
             case TILE_ELEMENT_SLOPE_N_S_VALLEY:
-                quad = xl - yl;
+                quad = std::abs(xl - yl);
                 break;
         }
-        if (quad > 0)
-        {
-            height += quad / 2;
-        }
+        height += quad / 2;
     }
 
     return height;
